@@ -22,9 +22,9 @@ version = '0.0.1-SNAPSHOT'
 description = 'Backend for Mission Control Service for OpenClaw'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-	}
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
 configurations {
@@ -34,23 +34,23 @@ configurations {
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
     implementation("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
-	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation ('org.springframework.boot:spring-boot-starter-opentelemetry') {
+    implementation('org.springframework.boot:spring-boot-starter-opentelemetry') {
         exclude group: 'io.micrometer', module: 'micrometer-registry-otlp'
     }
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
     runtimeOnly 'org.springframework.boot:spring-boot-docker-compose'
 
     // Database
@@ -62,5 +62,6 @@ dependencies {
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
+    jvmArgs "-XX:+EnableDynamicAgentLoading"
 }
